correct align

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,7 +3,7 @@
     margin: 0 auto;
 }
 .a {
-    text-align: center;
+    text-align: left;
     color: #A6CAF0;
     text-decoration: none;
 }
@@ -25,7 +25,6 @@ body {
     background-color: #A6CAF0;
 }
 header {
-    text-align:  center;
     background-color: #FF2020;
     color:#A6CAF0;
 }
@@ -50,7 +49,6 @@ footer {
     text-decoration: none;
 }
 footer p {
-    text-align: center;
     font-size: 0.9em;
 }
 footer p a:hover {
